<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_background">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/swordTadBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1" />

        <View
            android:id="@+id/axeTadBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="false"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@null"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_fight" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineGora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <ProgressBar
        android:id="@+id/progressA"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="140dp"
        android:layout_height="@dimen/progressBar_height"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:progress="100"
        app:layout_constraintEnd_toEndOf="@+id/kijankaLewa"
        app:layout_constraintStart_toEndOf="@+id/infoButton"
        app:layout_constraintTop_toTopOf="@+id/guidelineGora" />


    <ProgressBar
        android:id="@+id/progressB"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="@dimen/progressBar_height"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:progress="100"
        app:layout_constraintEnd_toStartOf="@+id/helpButton"
        app:layout_constraintStart_toStartOf="@+id/kijankaPrawa"
        app:layout_constraintTop_toTopOf="@+id/guidelineGora" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineLewa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <ImageView
        android:id="@+id/kijankaLewa"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@+id/imageBackground"
        app:layout_constraintEnd_toStartOf="@+id/kijankaPrawa"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guidelineLewa"
        app:layout_constraintStart_toStartOf="@+id/guidelineLewa"
        app:layout_constraintTop_toTopOf="@+id/imageBackground"
        app:layout_constraintVertical_bias="0.75"
        app:srcCompat="@drawable/left_tadpole_1" />

    <ImageView
        android:id="@+id/kijankaPrawa"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@+id/imageBackground"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePrawa"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/kijankaLewa"
        app:layout_constraintTop_toTopOf="@+id/imageBackground"
        app:srcCompat="@drawable/right_tadpole_2" />

    <TextView
        android:id="@+id/KLName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_bold"
        android:onClick="openDialog"
        android:text="@string/john"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageBackground"
        app:layout_constraintEnd_toEndOf="@+id/kijankaLewa"
        app:layout_constraintStart_toStartOf="@+id/kijankaLewa" />

    <TextView
        android:id="@+id/KRName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_bold"
        android:onClick="openDialog"
        android:text="@string/jerry"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageBackground"
        app:layout_constraintEnd_toEndOf="@+id/kijankaPrawa"
        app:layout_constraintStart_toStartOf="@+id/kijankaPrawa" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinePrawa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"
        app:layout_constraintStart_toEndOf="parent" />

    <TextView
        android:id="@+id/KLRound"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@color/main_green"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/YourTurn"
        app:layout_constraintEnd_toStartOf="@+id/KRRound"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageBackground" />

    <TextView
        android:id="@+id/KRRound"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@color/main_green"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/YourTurn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/KLRound"
        app:layout_constraintTop_toBottomOf="@+id/imageBackground" />

    <Button
        android:id="@+id/startCountKL"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/my_button"
        android:text="@string/countdown_start"
        android:textSize="@dimen/countDownStart_textSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/labelCounterKL"
        app:layout_constraintEnd_toStartOf="@id/startCountKR"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/guidelineLewa"
        app:layout_constraintStart_toStartOf="@+id/guidelineLewa"
        app:layout_constraintTop_toBottomOf="@+id/KLRound" />

    <Button
        android:id="@+id/startCountKR"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/my_button"
        android:text="@string/countdown_start"
        android:textSize="@dimen/countDownStart_textSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/labelCounterKR"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePrawa"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/startCountKL"
        app:layout_constraintTop_toBottomOf="@+id/KRRound" />

    <TextView
        android:id="@+id/labelCounterKL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:text="@string/zero"
        android:textAlignment="center"
        android:textSize="@dimen/countDownText_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/KLBtnAttack"
        app:layout_constraintEnd_toStartOf="@+id/labelCounterKR"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/guidelineLewa"
        app:layout_constraintStart_toStartOf="@+id/guidelineLewa"
        app:layout_constraintTop_toBottomOf="@+id/startCountKL" />

    <TextView
        android:id="@+id/labelCounterKR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:text="@string/zero"
        android:textAlignment="center"
        android:textSize="@dimen/countDownText_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/KRBtnAttack"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePrawa"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/labelCounterKL"
        app:layout_constraintTop_toBottomOf="@+id/startCountKR" />

    <ImageButton
        android:id="@+id/KLBtnAttack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/my_button"
        android:contentDescription="@string/attack_btn_desc"

        android:padding="15dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/KRBtnAttack"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/guidelineLewa"
        app:layout_constraintStart_toStartOf="@+id/guidelineLewa"
        app:layout_constraintTop_toBottomOf="@+id/labelCounterKL"
        app:srcCompat="@drawable/ic_miecz" />

    <ImageButton
        android:id="@+id/KRBtnAttack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/my_button"
        android:contentDescription="@string/attack_btn_desc"

        android:padding="15dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePrawa"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/KLBtnAttack"
        app:layout_constraintTop_toBottomOf="@+id/labelCounterKR"
        app:srcCompat="@drawable/ic_miecz" />

    <!--<TextView-->
    <!--android:id="@+id/KMInfoTxt"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginEnd="24dp"-->
    <!--android:background="@drawable/my_button_grey"-->
    <!--android:padding="@dimen/attackSummary_padding"-->
    <!--android:text="@string/attackField_text"-->
    <!--android:textAlignment="center"-->
    <!--android:textSize="@dimen/descriptTextSize"-->
    <!--app:layout_constraintEnd_toStartOf="@+id/KTInfoTxt"-->
    <!--app:layout_constraintHorizontal_bias="0.5"-->
    <!--app:layout_constraintHorizontal_chainStyle="spread_inside"-->
    <!--app:layout_constraintStart_toEndOf="@+id/guidelineLewa"-->
    <!--app:layout_constraintStart_toStartOf="@+id/guidelineLewa"-->
    <!--tools:layout_editor_absoluteY="499dp" />-->

    <!--<TextView-->
    <!--android:id="@+id/KTInfoTxt"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginStart="32dp"-->
    <!--android:background="@drawable/my_button_grey"-->
    <!--android:padding="@dimen/attackSummary_padding"-->
    <!--android:text="@string/attackField_text"-->
    <!--android:textAlignment="center"-->
    <!--android:textSize="@dimen/descriptTextSize"-->
    <!--app:layout_constraintEnd_toStartOf="@+id/guidelinePrawa"-->
    <!--app:layout_constraintHorizontal_bias="0.5"-->
    <!--app:layout_constraintStart_toEndOf="@+id/KMInfoTxt"-->
    <!--tools:layout_editor_absoluteY="499dp" />-->

    <Button
        android:id="@+id/helpButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_help"
        android:onClick="openHelpActivity"
        android:textColor="@color/creme_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePrawa"
        app:layout_constraintTop_toTopOf="@+id/guidelineGora" />

    <Button
        android:id="@+id/infoButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_info_black_24dp"
        android:onClick="openInfoActivity"
        android:textColor="@color/creme_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guidelineLewa"
        app:layout_constraintTop_toTopOf="@+id/guidelineGora" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineLewa"
        app:layout_constraintTop_toBottomOf="@+id/infoButton"
        app:srcCompat="@drawable/ic_serce"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/kijankaLewaHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/km_hp_value"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/infoButton" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelinePrawa"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpButton"
        app:srcCompat="@drawable/ic_serce"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/kijankaPrawaHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/kt_hp_value"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/helpButton" />

    <!--Uwaga pole bez wartości początkowej jest niewidoczne na layoucie-->
    <TextView
        android:id="@+id/kijankaLewaPts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:background="@drawable/ic_bam"
        android:paddingBottom="4dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/kijankaLewa"
        app:layout_constraintEnd_toEndOf="@+id/kijankaLewa"
        app:layout_constraintStart_toStartOf="@+id/kijankaLewa"
        app:layout_constraintTop_toTopOf="@+id/kijankaLewa"
        app:layout_constraintVertical_bias="0.83" />

    <!--Uwaga pole bez wartości początkowej jest niewidoczne na layoucie-->
    <TextView
        android:id="@+id/kijankaPrawaPts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:background="@drawable/ic_bam"
        android:paddingBottom="4dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/kijankaPrawa"
        app:layout_constraintEnd_toEndOf="@+id/kijankaPrawa"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="@+id/kijankaPrawa"
        app:layout_constraintTop_toTopOf="@+id/kijankaPrawa"
        app:layout_constraintVertical_bias="0.55" />
    <ImageButton
        android:id="@+id/changeroom"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_changeroom"
        android:background="#00ffffff"
        app:layout_constraintBottom_toBottomOf="@id/KLName"
        app:layout_constraintTop_toTopOf="@+id/KRName"
        app:layout_constraintStart_toEndOf="@id/KLName"
        app:layout_constraintEnd_toStartOf="@id/KRName"/>

</android.support.constraint.ConstraintLayout>